# trs4slip_blocks

./: CMakeLists.txt  LICENSE  README.md  trs4slip.pc.in
examples/: experiments.py  run_block_slip_algorithm.py  run_slip_algorithm.py  utility.py  utility_old.py
python/: .gitignore  CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py
python/extension/: trs4slip.pyx
src/: CMakeLists.txt  trs4slip.cpp  trs4slip.h  trs4slip_test.cpp
tests/inputs/: c_0000.csv  c_0001.csv  c_0002.csv  c_0003.csv  c_0004.csv  c_0005.csv  c_0006.csv  c_0007.csv  c_0008.csv  c_0009.csv  c_0010.csv  c_0011.csv  c_0012.csv  c_0013.csv  c_0014.csv  c_0015.csv  c_0016.csv  c_0017.csv  c_0018.csv  c_0019.csv  c_0020.csv  c_0021.csv  c_0022.csv  c_0023.csv  c_0024.csv  c_0025.csv  c_0026.csv  c_0027.csv  c_0028.csv  c_0029.csv  c_0030.csv  c_0031.csv  c_0032.csv  c_0033.csv  c_0034.csv  c_0035.csv  c_0036.csv  c_0037.csv  c_0038.csv  c_0039.csv  (+67 more)
tests/solutions/: sol_0000_0_1.csv  sol_0000_0_3.csv  sol_0000_0_4.csv  sol_0000_1_2.csv  sol_0000_1_3.csv  sol_0000_1_4.csv  sol_0000_2_1.csv  sol_0000_2_2.csv  sol_0000_2_3.csv  sol_0000_2_4.csv  sol_0001_0_1.csv  sol_0001_0_2.csv  sol_0001_0_3.csv  sol_0001_0_4.csv  sol_0001_1_1.csv  sol_0001_1_2.csv  sol_0001_1_3.csv  sol_0001_1_4.csv  sol_0001_2_4.csv  sol_0002_0_0.csv  sol_0002_0_2.csv  sol_0002_0_3.csv  sol_0002_0_4.csv  sol_0002_1_0.csv  sol_0002_1_2.csv  sol_0002_1_3.csv  sol_0002_1_4.csv  sol_0002_2_1.csv  sol_0002_2_4.csv  sol_0003_0_0.csv  sol_0003_0_1.csv  sol_0003_0_2.csv  sol_0003_0_3.csv  sol_0003_0_4.csv  sol_0003_1_1.csv  sol_0003_1_2.csv  sol_0003_1_3.csv  (+505 more)
